# ToiBot1

./: README.md  he.txt
devel/: .catkin  .rosinstall  setup.sh
devel/include/motors/: motorsCommand.h
devel/include/toi_bot_speakers/: speakersCommand.h
devel/include/toi_bot_stt/: speechTT.h
devel/include/toi_bot_vision/: visionMsgCommand.h  visionMsgOutput.h
devel/lib/pkgconfig/: motors.pc  purim_imgs.pc  robot_manager.pc  toi_bot_speakers.pc  toi_bot_stt.pc  toi_bot_vision.pc  toibot.pc
devel/lib/purim_imgs/: purim_imgs_node
devel/lib/robot_manager/: robot_manager_node
src/: README.md  purim_imgs.tar.xz
src/motors/: CMakeLists.txt  headTracking.txt  lipsTalk.txt  motors.txt  package.xml
src/motors/launch/: motors_control_launch.launch
src/motors/msg/: motorsCommand.msg
src/motors/src/: facial_expressions.py  lipsSpeak.py  motorsAPI.py  motors_control.py  move_eyes_script.py  waitingPatiently.py  waiting_motors.py
src/purim_imgs/: CMakeLists.txt  package.xml  param.txt
src/purim_imgs/src/: main.cpp
src/robot_manager/: CMakeLists.txt
src/robot_manager/include/: robot_managerRos.h
src/robot_manager/launch/: robot_manager_launch.launch
src/scripts/: CMakeLists.txt
src/speech_to_text/: dialogflowAPI.py  get_Strings_node.py  speech_to_text.py  wake_word_node.py
src/text_to_speech/: package.xml  say_string.py
src/toi_bot_speakers/: CMakeLists.txt  package.xml
src/toi_bot_stt/: CMakeLists.txt  package.xml
src/toi_bot_vision/: CMakeLists.txt  package.xml
src/toi_bot_vision/src/: main.cpp  (+6 more)
src/toibot/: CMakeLists.txt  package.xml
(+92 files in other folders)
